<resources>
    <string name="app_name">HPDT-Taxi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="str_phone_no">Phone No</string>
    <string name="str_password">Password</string>
    <string name="str_login_">Login</string>
    <string name="str_login">Login</string>
    <string name="str_past">PAST</string>
    <string name="str_upcomming">UPCOMIMG</string>
    <string name="str_request_cab">Book car</string>
    <string name="str_not_avilable">Not available</string>
    <string name="str_gome_only">Ready to launch</string>
    <string name="str_your_trips">Your Tabs</string>
    <string name="str_help">Help</string>
    <string name="str_Payments">Payments</string>
    <string name="str_settings">Settings</string>
    <string name="str_simple_app">THIS IS A SAMPLE APP</string>
    <string name="str_my_tabs">My Tabs</string>
    <string name="strSchedule">Schedule</string>
    <string name="str_ride_history">Ride History</string>
    <string name="str_EarningHistory">Earning History</string>
    <string name="str_about_app">About App</string>
    <string name="str_support">Support</string>
    <string name="sr_cancel">Cancel</string>
    <string name="title_activity_maps">Map</string>
    <string name="str_offline">Offline</string>
    <string name="str_be_a_tour_provider">Be a Tour Provider</string>
    <string name="str_or">or</string>
    <string name="str_signup">Signup</string>
    <string name="str_login_enter_your_detail_to_login">Enter Your Details here to Login to Get a Tour App.</string>
    <string name="str_email">Email</string>
    <string name="str_login_now">Login now</string>
    <string name="str_forgot_password">Forgot Password?</string>
    <string name="str_continue_as">Continue as a?</string>
    <string name="str_indvisual">Individual</string>
    <string name="str_company">Company</string>
    <string name="str_contact_info">Contact Information</string>
    <string name="str_name">Name</string>
    <string name="str_personal_info">Personal Information</string>
    <string name="str_tell_us_about">Tell us about yourself</string>
    <string name="str_education">Education</string>
    <string name="str_experience">Experience (in years)</string>
    <string name="str_traininig">Training</string>
    <string name="str_register_on_plateform">Register on the platform as</string>
    <string name="str_partner_with_get_a_tour">Partner With Get a Tour</string>
    <string name="str_no_commission_high_earning">No Commission and High Earnings</string>
    <string name="str_company_info">Company Information</string>
    <string name="str_company_name">Company Name</string>
    <string name="str_your_info">Your Information</string>
    <string name="str_designation">Designation</string>
    <string name="settings">setting</string>
    <string name="permission_denied_explanation">Permission Denied</string>
    <string name="str_verify_now">Verify Now</string>
    <string name="enter_otp">Enter the 6-digit code send to you at</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="didnt_receive">Didn\'t Receive?</string>
    <string name="reach_us">Reach us</string>
    <string name="error_str_enter_otp">Enter OTP</string>
    <string name="str_you_are_offline">You are offline!</string>
    <string name="str_go_online_to_start">Go online to start accepting jobs</string>
    <string name="str_scan">Scan</string>
    <string name="str_qr_code_scane_required">QR Code Scan Required</string>
    <string name="str_scan_your_qrcode_">Scan Your QR Code with your Vehicle QR Code to contiue.</string>
    <string name="str_to_go_online_on_get">To be available, you need to scan your vehicle QR code first</string>
    <string name="str_scan_qr_code">Scan QR Code</string>
    <string name="str_scanned_successfully">Scanned Successfully</string>
    <string name="str_proceed">PROCEED</string>
    <string name="str_you_are_online">You are Online Now!</string>
    <string name="str_go_your_jobs_will_be_aloted">Your jobs will be alloted to you Shortly</string>
    <string name="str_online">Online</string>
    <string name="str_contact_number">Contact Number</string>
    <string name="str_driver_documents">Driver Documents</string>
    <string name="str_driving_license">Driving License</string>
    <string name="str_upload_required">Upload required</string>
    <string name="str_police_verification_certificate">Police Verification Certificate</string>
    <string name="str_vehicle_documents">Vehicle Documents</string>
    <string name="str_vehicle_registration">Vehicle Registration</string>
    <string name="str_vehicle_permit">Vehicle Permit</string>
    <string name="str_upload_documents">Upload Documents</string>
    <string name="str_continue">Continue</string>
    <string name="str_select_any_one_tour_cat">Select any one tour  category</string>
    <string name="str_air">Air</string>
    <string name="str_tour_category">Tour Category</string>
    <string name="str_land">Land</string>
    <string name="str_water">Water</string>
    <string name="str_walking">Walking</string>
    <string name="str_select_tour_type">Select your tour category</string>
    <string name="error_enter_password">Enter valid password</string>
    <string name="error_email">Enter valid email address</string>
    <string name="str_you_need_to_upload">You need to Upload</string>
    <string name="str_logout">Logout</string>
    <string name="str_app_name">App Name</string>
    <string name="str_app_version">Version</string>
    <string name="str_Earning">Earnings</string>
    <string name="str_total_Earning">Total Earnings</string>
    <string name="str_week">Week</string>
    <string name="str_today">Today</string>
    <string name="str_trips">Trips</string>
    <string name="str_ratings">Ratings</string>
    <string name="str_reviews">Reviews</string>
    <string name="str_overview">Overview</string>
    <string name="str_profile">Profile</string>
    <string name="str_education_detail">Education Details</string>
    <string name="str_compliments">Compliments</string>
    <string name="str_your_message">Your Message</string>
    <string name="str_send">Send</string>
    <string name="str_start_trip">Start trip</string>
    <string name="str_chat_with_user">Chat with user</string>
    <string name="str_trip_status">Trip Status</string>
    <string name="str_complete_trip"> Complete Trip</string>
    <string name="str_rejected_trips">Rejected Trips</string>
    <string name="str_login_with_geta_tour">Login With Get a Tour</string>
    <string name="str_copyrights">\@ 2019 copyrights</string>
    <string name="str_your_total_earning">Your Total Earnings For this Week</string>
    <string name="str_your_ride_this_week">Your Total Rides For this Week</string>
    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>
    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancel</string>
    <string name="str_login_please">Please login</string>
    <string name="str_unavailable">Unavailable</string>
    <string name="str_go_online_to_start_new">Go online to start working</string>
    <string name="str_available">Available</string>
    <string name="str_you_are_unavailble">You are unavailable</string>
    <string name="str_you_are_available">You are available now</string>
    <string name="str_received_successfully">Received successfully from</string>
    <string name="str_rate_user">Rate User</string>
    <string name="str_booking_details">Booking Details</string>
    <string name="str_destination">Destination</string>
    <string name="str_time_taken">Time Taken</string>
    <string name="str_distance">Distance</string>
    <string name="str_payment_mod">Payment Mode</string>
    <string name="str_provide_your_value">Provide your feedback..</string>
    <string name="str_pickup">Pick Up</string>
    <string name="str_dropoff">Drop off</string>
    <string name="str_datetime"><![CDATA[Date & Time]]></string>
    <string name="str_you_have_30_sec">You Have 30 Seconds to Reject This ride. After timeout it will be Auto Accepted</string>
    <string name="str_reject">Reject</string>
    <string name="str_warning">Warning !!</string>
    <string name="str_you_have_got_5_non_penalty">You have got 5 non-penalty trips, in the basic charges would be deducted</string>
    <string name="str_accept">Accept</string>
    <string name="str_start_moving">Start moving</string>
    <string name="str_month">Month</string>
    <string name="str_this_week">This Week</string>
    <string name="str_enter_title">Enter title</string>
    <string name="str_selected_tour">Selected Tour</string>
    <string name="str_select_your_tour">Select your tour here...</string>
    <string name="str_choose_time_and_date"><![CDATA[Choose Time & Date]]></string>
    <string name="str_all_day">All day</string>
    <string name="str_from">From</string>
    <string name="str_to">To</string>
    <string name="str_location">Location</string>
    <string name="str_desription">Description</string>
    <string name="str_save">Save</string>
    <string name="str_successfully_logedin"> Login Successful</string>
    <string name="str_speaks">Speaks</string>
    <string name="str_and">and</string>
    <string name="str_goOffline">Go offline</string>
    <string name="str_vehicle_not_available">Not available</string>
    <string name="str_upcoming_tours">Upcoming Tours</string>
    <string name="str_see_all">See All</string>
    <string name="str_arrived">Arrived</string>
    <string name="str_mark_arrived_text">Mark this location arrived. Tour status will be updated and user gets notified</string>
    <string name="str_pickup_">Pickup</string>
    <string name="str_select_option">Please select a relevant option</string>
    <string name="str_you_gota_breakdown">You got a breakdown</string>
    <string name="str_rider_not_show_up">The rider didn\'t show up.</string>
    <string name="str_rider_behaviour_isnt_appro">The rider\'s behavior isn\'t appropriate.</string>
    <string name="str_there_is_road_block">There is a roadblock.</string>
    <string name="str_other">Other,( mention the problem)</string>
    <string name="str_location_permission">Location permission Required</string>
    <string name="str_location_permission_alert_message">Plesae allow us to access your location. Allow location permission</string>
    <string name="strProfile">Profile</string>
    <string name="str_reached_pickup_point">Reached Pickup Point</string>
    <string name="str_call_customer">Call Customer</string>
    <string name="str_call_store">Call Store</string>
    <string name="str_navigation">Navigation</string>
    <string name="change_settings">Change Settings</string>
    <string name="strNotifications">Notifications</string>
    <string name="str_ride_history_and_schedule"><![CDATA[Trip History & Schedule]]></string>
    <string name="str_payment_methods">Payment method</string>
    <string name="str_cash">Cash</string>
    <string name="str_add_payment_method">Add payment method</string>
    <string name="str_promo_codes">Promo Codes</string>
    <string name="str_add_promo_codes">Add Promo code</string>
</resources>