<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/landingLogoTop">

        <TextView
                style="@style/CommonTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_be_a_tour_provider"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_18sdp"
                android:padding="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textStyle="bold" />

        <Button
                android:id="@+id/loginBtn"
                style="@style/CommonTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/rectangle_background"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/str_login"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_13sdp" />

        <TextView
                style="@style/CommonTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_or"
                android:textAllCaps="true"
                android:textColor="@color/colorTextGrey"
                android:textSize="@dimen/_14sdp" />

        <Button
                android:id="@+id/signUpBtn"
                style="@style/CommonTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/rectangle_bg_with_border"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/str_signup"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_13sdp" />

    </LinearLayout>
</LinearLayout>